[package]
name = "httpbenchy"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast HTTP(S) benchmark, like ab/wrk/oha"
license = "MIT OR Apache-2.0"

[[bin]]
name = "httpbenchy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "signal"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
url = "2"
hdrhistogram = "7"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
webpki-roots = "0.26"
humantime = "2"
num_cpus = "1"
anyhow = "1"
parking_lot = "0.12"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
