[package]
name = "databench"
version = "0.1.0"
edition = "2021"
description = "Multi-protocol network benchmark: HTTP(S), ICMP ping, TCP, DNS, TLS"
license = "MIT OR Apache-2.0"

[[bin]]
name = "databench"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "signal"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
hdrhistogram = "7"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
webpki-roots = "0.26"
humantime = "2"
num_cpus = "1"
anyhow = "1"
parking_lot = "0.12"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
surge-ping = "0.8"
socket2 = "0.6"
rand = { version = "0.8", features = ["small_rng"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "tokio-rustls-comp"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
futures-util = "0.3"
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-smithy-types = "1"
base64 = "0.22"
memchr = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
